--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Happy</title>
 
-    <link rel="icon" href="./public/images/logo-icon.png">
+    <link rel="icon" href="/images/logo-icon.png">
     
     <!-- Estilos Customizados-->
-    <link rel="stylesheet" href="./public/css/styles.css">
-    <link rel="stylesheet" href="./public/css/animations.css">
-    <link rel="stylesheet" href="./public/css/page-landing.css">
+    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/animations.css">
+    <link rel="stylesheet" href="/css/page-landing.css">
     
     <!-- Fontes -->
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;800&display=swap" rel="stylesheet">
@@ -19,10 +19,10 @@
     <div id="page-landing">
         <div id="container">
             <header>
-                <img class="logo animate-up" src="./public/images/logo.svg" alt="Logomarca de Happy">
+                <img class="logo animate-up" src="/images/logo.svg" alt="Logomarca de Happy">
         
                 <div class="location animate-up">
-                    <strong>Fortaleza</strong>
+                    <strong>{{city}}</strong>
                     
                     <p>Ceará</p>
                 </div>
@@ -33,8 +33,8 @@
                 <section class="visit">
                     <p class="animate-up">Visite orfanatos e mude o dia de muitas crianças</p>
         
-                    <a href="./orphanages.html" class="animate-up" title="Visite orfanatos">
-                        <img src="./public/images/arrow.svg" alt="Ir para o mapa">
+                    <a href="/orphanages" class="animate-up" title="Visite orfanatos">
+                        <img src="/images/arrow.svg" alt="Ir para o mapa">
                     </a>
                 </section>
             </main>
