--- a/src/views/create-orphanage.hbs
+++ b/src/views/create-orphanage.hbs
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adicionar um orfanato | Happy</title>
 
-    <link rel="icon" href="./public/images/logo-icon.png">
+    <link rel="icon" href="/images/logo-icon.png">
     
     <!-- Estilos Customizados-->
-    <link rel="stylesheet" href="./public/css/styles.css">
-    <link rel="stylesheet" href="./public/css/sidebar.css">
-    <link rel="stylesheet" href="./public/css/animations.css">
-    <link rel="stylesheet" href="./public/css/form.css">
-    <link rel="stylesheet" href="./public/css/create.css">
-    <link rel="stylesheet" href="./public/css/buttons.css">
+    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/sidebar.css">
+    <link rel="stylesheet" href="/css/animations.css">
+    <link rel="stylesheet" href="/css/form.css">
+    <link rel="stylesheet" href="/css/create.css">
+    <link rel="stylesheet" href="/css/buttons.css">
 
     <!-- Leaflet -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
@@ -30,11 +30,11 @@
 <body>
    <div id="page-create">
        <aside class="animation-right sidebar">
-            <img src="public/images/map-marker.svg" alt="Happy">
+            <img src="/images/map-marker.svg" alt="Happy">
 
             <footer>
                 <button onclick="history.back()">
-                    <img src="./public/images//arrow-back.svg" alt="">
+                    <img src="/images//arrow-back.svg" alt="">
                 </button>
             </footer>
        </aside>
@@ -82,7 +82,7 @@
                         </div>
 
                         <button type="button" onclick="addPhotos()">
-                            <img src="./public/images/plus.svg" alt="Nova Imagem">
+                            <img src="/images/plus.svg" alt="Nova Imagem">
                         </button>
                     </div>
 
@@ -117,6 +117,6 @@
        </main>
    </div>
 
-   <script src="./public/scripts/page-create.js"></script>
+   <script src="/scripts/page-create.js"></script>
 </body>
 </html>
