--- a/src/views/orphanage.hbs
+++ b/src/views/orphanage.hbs
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lar das Meninas | Happy</title>
 
-    <link rel="icon" href="./public/images/logo-icon.png">
+    <link rel="icon" href="/images/logo-icon.png">
     
     <!-- Estilos Customizados-->
-    <link rel="stylesheet" href="./public/css/styles.css">
-    <link rel="stylesheet" href="./public/css/sidebar.css">
-    <link rel="stylesheet" href="./public/css/animations.css">
-    <link rel="stylesheet" href="./public/css/orphanage.css">
-    <link rel="stylesheet" href="./public/css/buttons.css">
+    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/sidebar.css">
+    <link rel="stylesheet" href="/css/animations.css">
+    <link rel="stylesheet" href="/css/orphanage.css">
+    <link rel="stylesheet" href="/css/buttons.css">
 
     <!-- Leaflet -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
@@ -29,18 +29,19 @@
 <body>
    <div id="page-orphanage">
        <aside class="animation-right sidebar">
-            <img src="public/images/map-marker.svg" alt="Happy">
+            <img src="images/map-marker.svg" alt="Happy">
 
             <footer>
                 <button onclick="history.back()">
-                    <img src="./public/images//arrow-back.svg" alt="">
+                    <img src="/images/arrow-back.svg" alt="">
                 </button>
             </footer>
+            
        </aside>
 
        <main class="animation-appear width-sidebar">
            <div class="orphanage-details">
-                <img src="./public/images/home.jpg" alt="Lar das Meninas">
+                <img src="/images/home.jpg" alt="Lar das Meninas">
 
                 <div class="images">
                     <button onclick="selectImage(event)" class="active">
@@ -69,8 +70,8 @@
                 </div>
 
                 <div class="orphanage-details-content">
-                    <h1>Lar das Meninas</h1>
-                    <p>Presta assistência a crianças de 6 a 15 anos em situação de vunerabilidade.</p>
+                    <h1>{{orphanage.name}}</h1>
+                    <p>{{orphanage.description}}</p>
 
                     <div class="map-container">
                         <div id="mapid"></div>
@@ -82,21 +83,21 @@
                     <hr>
 
                     <h2>Instrução para visita</h2>
-                    <p>Venha se sentir acolhido e traga muito amor e paciência.</p>
+                    <p>{{orphanage.instruction}}</p>
 
                     <div class="open-details">
                         <div class="hour">
-                            <img src="./public/images/clock.svg" alt="Horários">
-                            Horário de visitas Das 18h até 8h
+                            <img src="/images/clock.svg" alt="Horários">
+                            {{orphanage.opening_hours}}
                         </div>
                         <div class="open-on-weekends">
-                            <img src="./public/images/info.svg" alt="">
+                            <img src="/images/info.svg" alt="">
                             Atendemos aos fins de semana
                         </div>
                     </div>
 
                     <button class="primary-button" type="button">
-                        <img src="./public/images/whatsapp.svg" alt="Chamar no Whatsapp">
+                        <img src="/images/whatsapp.svg" alt="Chamar no Whatsapp">
                         Entrar em Contato
                     </button>
                 </div>
@@ -104,6 +105,6 @@
        </main>
    </div>
 
-   <script src="./public/scripts/page-orphanage.js"></script>
+   <script src="/scripts/page-orphanage.js"></script>
 </body>
 </html>
